# AI_Client_Core

./: .gitignore  .md  AGENTS.md  API_QUICK_REFERENCE.md  Cargo.toml  PLUGIN_MANAGEMENT_IMPLEMENTATION.md  Readme.md  orchestrator.md
examples/: image.rs  llm.rs  llm_ai_dialogue.rs  main.rs  orchestrate.rs  plugin_management.rs  tts.rs
examples/senses/: llm_a.rs  llm_b.rs  militech_acs.rs  mod.rs
plugins/: deepseek-llm.fcplug  qwen-image.fcplug  qwen-llm.fcplug  qwen-tts.fcplug
src/: client.rs  http_poster.rs  lib.rs  storage.rs
src/audio/: decoder.rs  mod.rs
src/image/: mod.rs  session.rs  types.rs
src/llm/: accumulator.rs  config.rs  handle.rs  mod.rs  session.rs  stream_decoder.rs  tool.rs  tree.rs  types.rs
src/orchestrator/: context.rs  mod.rs  orchestrate.rs  orchestrator.rs
src/plugin/: bindings.rs  host.rs  loaded.rs  manager.rs  mapper.rs  mod.rs  pipeline.rs  pool.rs  registry.rs  scanner.rs  types.rs
src/sense/: mod.rs
src/tool/: mod.rs  registry.rs
src/tts/: mod.rs  session.rs  types.rs
wit/: plugin.wit
